tests/error/template_n_mismatch.gw
// [contains] arguments do not match for template call
function<~A~> void test(){ <<<"func">>>;}
function<~A~> void test(int i){<<<"other func">>>;}

test<~int, float, int~>();
//test<~int~>();
